--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/views/settings.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/views/settings.html
@@ -1,18 +1,16 @@
 <div>
-	
-	<h3 class="title">Settings</h3>
-	<span style="color:red">Under construction!</span>
+	<h3 class="title" ng-bind="settingsVm.i18n.format('settings.title')"></h3>
 	<div class="form-group">
-		<label>User name</label>
+		<label ng-bind="settingsVm.i18n.format('settings.username_label')"></label>
 		<div class="form-control">
-			<span ng-bind="settingsVm.user.uname"></span>
+			<span ng-bind="settingsVm.user.username" title="{{settingsVm.i18n.format('settings.username_label')}}"></span>
 	     </div>
   	</div>	
 	<div class="form-group">
-		<label>Avatar image</label>
+		<label ng-bind="settingsVm.i18n.format('settings.avatar_label')"></label>
 		<div class="form-control" style="height:initial">
 			<input type="file" nv-file-select uploader="settingsVm.uploader" style="display:inline-block"/>
-	        <img ng-src="{{settingsVm.user.avatarUrl}}" ng-show="settingsVm.user && settingsVm.user.avatarUrl" />
+			<img ng-src="../../js/profile/avatar.js" class="user-pic" title="{{settingsVm.i18n.format('settings.avatar_label')}}"/>
 	     </div>
   	</div>
 </div>
