--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/markers_on_map/ui-for-markers-on-map-entity.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/markers_on_map/ui-for-markers-on-map-entity.html
@@ -43,8 +43,8 @@
 			            '<div id="bodyContent"><p>' +
 			            
 #foreach ($tableColumn in $tableColumns)
-#if($tableColumn.isVisible())
-			            '${tableColumn.getLabel()}: <b>' + entity.${tableColumn.getName()} + '</b><br>' +
+#if($tableColumn.visible)
+			            '${tableColumn.label}: <b>' + entity.${tableColumn.name} + '</b><br>' +
 #end
 #end			            
 			            '</p></div>';
