--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/index.html
@@ -50,11 +50,13 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-file-upload/2.3.4/angular-file-upload.js"></script>	
 	<script src="js/angular-timeline.js"></script>	
 	<script src="js/angular-scroll-animate.js"></script>	
-	
+	<script src="js/ng-i18n.js"></script>
+	<script src="js/i18n.js"></script>	
 	<script src="http://mbenford.github.io/ngTagsInput/js/ng-tags-input.min.js"></script>
 	
 	<script src="js/app.js"></script>
-	<script src="js/http-resources.js"></script>	
+	<script src="js/http-resources.js"></script>
+	<script src="js/http-resources-sec.js"></script>	
 	<script src="js/app-directives.js"></script>	
 	<script src="js/app-services.js"></script>		
 	
