--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_manage/ui-for-entity-manage.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_manage/ui-for-entity-manage.html
@@ -146,7 +146,7 @@
 						ng-model="selectedEntry.${tableColumn.name}"
 						ng-readonly="operation == 'show'" required="required">
 #else
-#if ($tableColumn.getSize() < 40)
+#if ($tableColumn.size < 40)
 				  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
 #else
 				  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
