--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list/ui-for-entity-list.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list/ui-for-entity-list.html
@@ -26,8 +26,8 @@
 				<thead>
 					<tr>
 #foreach ($tableColumn in $tableColumns) 
-#if($tableColumn.isVisible())
-						<th>${tableColumn.getLabel()}</th>
+#if($tableColumn.visible)
+						<th>${tableColumn.label}</th>
 #end
 #end
 					</tr>
@@ -35,11 +35,11 @@
 				<tbody>
 					<tr ng-repeat="entry in data">
 #foreach ($tableColumn in $tableColumns) 
-#if($tableColumn.isVisible())
-#if ($tableColumn.getWidgetType() == "date")
-						<td>{{entry.${tableColumn.getName()} | date:format}}</td>
+#if($tableColumn.visible)
+#if ($tableColumn.widgetType == "date")
+						<td>{{entry.${tableColumn.name} | date:format}}</td>
 #else
-						<td>{{entry.${tableColumn.getName()}}}</td>
+						<td>{{entry.${tableColumn.name}}}</td>
 #end
 #end
 #end
