theming aware templates https://bugs.eclipse.org/bugs/show_bug.cgi?id=512626

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/index.html
@@ -16,7 +16,6 @@
 <link rel="stylesheet" href="css/angular-timeline-animations.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ng-tags-input/3.1.1/ng-tags-input.min.css">
 
-<link rel="stylesheet" href="css/default.css">
 
 </head>
 
@@ -34,6 +33,8 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>	
 	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
+	<script src="/services/web/resources/themes/theme.js"></script>
+	<link rel="stylesheet" href="css/default.css">
 	
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.3/ui-bootstrap.min.js"></script>
