harmonizing root folder for derby, repository and cmis

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/index.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContent/discussion_boards/WebContent/index.html
@@ -24,6 +24,9 @@
 	<div class="container-fluid">
 		
 		<div class="row-fluid page">
+			<div class="col-lg-12">
+				<h1 class="page-header">${pageTitle}</h1>
+			</div>
 			<header class="page-title" style="margin: 10px 0" ui-view="toolbar"></header>
 			<div class="page-content" ui-view></div>
 		</div>
