--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_manage/ui-for-entity-manage.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_manage/ui-for-entity-manage.html
@@ -26,6 +26,7 @@
 		</div>
 		<div class="container">
 			<div class="alert alert-danger" ng-show="errorMessage">{{errorMessage}}</div>
+			<div class="alert alert-success alert-dismissible" ng-show="successMessage">{{successMessage}}</div>
 			<!-- entities table -->
 			<table class="table table-condensed">
 				<thead>
