content update - fleur theme added

--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/orion/code_edit/built-codeEdit.css
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/registry/public/WebContent/registry/orion/code_edit/built-codeEdit.css
@@ -1,5 +1,6 @@
 .textview {
 	background-color: white;
+	color: black;
 	font-family: "Consolas", "Monaco", "Vera Mono", monospace;
 	font-size: 12px;
 	min-width: 50px;
@@ -2448,3 +2449,9 @@ a.breadcrumb.currentLocation {
 	border-radius: 0; 
 	color: #FFF;
 }
+
+
+
+
+
+
