--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_details/ui-for-entity-list-and-details.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_details/ui-for-entity-list-and-details.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="/services/web/resources/css/forms.css">
 	<script src="/services/web/resources/themes/theme.js"></script>
 </head>
-<body style="margin-left: 20px">
+<body>
 
 	<div id="wrap" ng-controller="ListAndDetailsController">
 		<div class="row">
