--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_manage/ui-for-entity-manage.html
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/runtime/org.eclipse.dirigible.runtime.content/src/content/db/dirigible/templates/WebContentForEntity/list_and_manage/ui-for-entity-manage.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="/services/web/resources/css/forms.css">
 	<script src="/services/web/resources/themes/theme.js"></script>
 </head>
-<body style="margin-left: 20px">
+<body>
 	<div id="wrap" ng-controller="ManageController">
 		<div class="row">
 			<div class="col-lg-12">
@@ -74,19 +74,19 @@
 			<br><br><br>
 			<div>
 				<!-- input form -->
-				<div>
+				<form>
 				  
 #foreach ($tableColumn in $tableColumns)
 #if($tableColumn.visible)
 #if ($tableColumn.key)
 				  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-					<label>${tableColumn.label}</label>
+					<label class="control-label">${tableColumn.label}</label>
 					<input type="text" class="form-control" 
 						ng-model="selectedEntry.${tableColumn.name}" readonly>
 #else
 #if ($tableColumn.widgetType == "date")
 				  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-					<label>${tableColumn.label}</label>
+					<label class="control-label">${tableColumn.label}</label>
 					<p class="input-group">
 		            	<input type="text" ng-model="selectedEntry.${tableColumn.name}" class="form-control ng-pristine ng-valid ng-isolate-scope ng-valid-required ng-touched" 
 		               		uib-datepicker-popup="" is-open="${tableColumn.name}Status.opened" 
@@ -98,13 +98,13 @@
 		           	</p>
 #elseif ($tableColumn.widgetType == "textarea")
 				  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<label>${tableColumn.label}</label>
+					<label class="control-label">${tableColumn.label}</label>
 					<textarea class="form-control" 
 						ng-model="selectedEntry.${tableColumn.name}" cols="50" rows="5" 
 						ng-readonly="operation == 'show'" required="required"></textarea>
 #elseif ($tableColumn.widgetType == "dropdown")
 				  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-					<label>${tableColumn.label}</label>
+					<label class="control-label">${tableColumn.label}</label>
 					<input type="hidden" class="form-control" 
 						ng-model="selectedEntry.${tableColumn.name}"
 						ng-readonly="operation == 'show'" required="required">
@@ -113,7 +113,7 @@
 					</div>
 #elseif ($tableColumn.widgetType == "list")
 				  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-					<label>${tableColumn.label}</label>
+					<label class="control-label">${tableColumn.label}</label>
 					<input type="hidden" class="form-control" 
 						ng-model="selectedEntry.${tableColumn.name}"
 						ng-readonly="operation == 'show'" required="required">
@@ -122,13 +122,13 @@
 					</div>
 #elseif ($tableColumn.widgetType == "integer")
 				  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-					<label>${tableColumn.label}</label>
+					<label class="control-label">${tableColumn.label}</label>
 					<input type="number" class="form-control text-right" pattern="\d*" step="1"
 						ng-model="selectedEntry.${tableColumn.name}"
 						ng-readonly="operation == 'show'" required="required">
 #elseif ($tableColumn.widgetType == "float")
 				  <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
-					<label>${tableColumn.label}</label>
+					<label class="control-label">${tableColumn.label}</label>
 					<input type="number" class="form-control text-right" pattern="[0-9]+([\.,][0-9]+)?" step="0.01"
 						ng-model="selectedEntry.${tableColumn.name}"
 						ng-readonly="operation == 'show'" required="required">
@@ -138,7 +138,7 @@
 #else
 				  <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 #end
-					<label>${tableColumn.label}</label>
+					<label class="control-label">${tableColumn.label}</label>
 					<input type="text" class="form-control" 
 						ng-model="selectedEntry.${tableColumn.name}"
 						ng-readonly="operation == 'show'" required="required">
@@ -147,7 +147,7 @@
 				  </div>
 #end
 #end
-				</div>
+				</form>
 				
 				<!-- save and cancel buttons -->
 				<div class="btn-group col-xs-12 col-sm-12 col-md-12 col-lg-12">
