--- a/releng/war-all/.settings/org.eclipse.wst.common.component
+++ b/releng/war-all/.settings/org.eclipse.wst.common.component
@@ -18,6 +18,9 @@
         <dependent-module archiveName="dirigible-runtime-core-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-runtime-core/dirigible-runtime-core">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="dirigible-engine-web-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-engine-web/dirigible-engine-web">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <dependent-module archiveName="dirigible-commons-logging-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-commons-logging/dirigible-commons-logging">
             <dependency-type>uses</dependency-type>
         </dependent-module>
