--- a/releng/war-all/.settings/org.eclipse.wst.common.component
+++ b/releng/war-all/.settings/org.eclipse.wst.common.component
@@ -65,6 +65,12 @@
         <dependent-module archiveName="dirigible-engine-js-nashorn-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-engine-js-nashorn/dirigible-engine-js-nashorn">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="dirigible-engine-js-v8-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/dirigible-engine-js-v8/dirigible-engine-js-v8">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="content-api-http-3.0.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/content-api-http/content-api-http">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="java-output-path" value="/dirigible-war-all/target/classes"/>
         <property name="context-root" value="ROOT"/>
     </wb-module>
